# muon-detector

./: .gitignore  README.md
discrete/: README.txt  plot_separation.sh  plot_separation_20.sh  plot_separation_iso.sh  plot_single.sh  plot_single_zero.sh  plot_tele.sh  plot_tele_20.sh  plot_tele_exp.sh  plot_tele_exp_20.sh  plot_tele_exp_s30.sh  plot_tele_exp_s30_20.sh
discrete/cprog/: CMakeLists.txt
discrete/cprog/apps/: CMakeLists.txt  single.c  tele.c
discrete/cprog/include/geometry/: geometry.h
discrete/cprog/include/pdg/: pdg.h
discrete/cprog/include/sphere/: sphere.h
discrete/cprog/lib/: CMakeLists.txt  geometry.c  pdg.c  sphere.c  vector.c
monte-carlo/: plot_separation.sh  plot_separation_20.sh  plot_separation_iso.sh  plot_solid.sh  plot_solid_depth.sh  plot_solid_trans.sh  plot_solid_world.sh  plot_tele.sh
monte-carlo/cprog/: CMakeLists.txt
monte-carlo/cprog/apps/: CMakeLists.txt  cry_root.cc  exp_decay.c  exp_iso.c  pdg_gun.c  solid.c  tele.c
monte-carlo/cprog/include/geometry/: geometry.h
monte-carlo/cprog/include/gun/: gun.h  gun_decay.h  gun_iso.h  gun_pdg.h  gun_range.h
monte-carlo/cprog/include/pdf/: pdf.h
monte-carlo/cprog/include/pdg/: pdg.h
monte-carlo/cprog/include/sphere/: sphere.h
monte-carlo/cprog/include/vector/: vector.h
monte-carlo/cprog/lib/: CMakeLists.txt  geometry.c  gun.c  gun_decay.c  gun_iso.c  gun_pdg.c  gun_range.c  pdf.c  pdg.c  sphere.c
monte-carlo/cprog/tests/: CMakeLists.txt  test_geo.c  test_vec.c
