# 'cry' event generator library
set(CRY_ROOT_INCLUDED 1)
set(CRY_HOME "$ENV{CRYHOME}")
if ("${CRY_HOME}" STREQUAL "")
  set(CRY_ROOT_INCLUDED 0)
  message(STATUS "Could not read 'CRYHOME' path. Did you forget to set it?")
else()
  message(STATUS "Using 'cry' library from ${CRY_HOME}")
endif()

set(CRY_INCLUDE_DIRS ${CRY_HOME}/src)
set(CRY_LIBRARY_DIRS ${CRY_HOME}/lib)
set(CRY_DATA_DIR ${CRY_HOME}/data)
set(CRY_LIBRARIES "libCRY.a")

# 'ROOT' tools and library path
set(ROOT_SYS_INCLUDED 1)
set(ROOT_SYS "$ENV{ROOTSYS}")
if ("${ROOT_SYS}" STREQUAL "")
  set(ROOT_SYS_INCLUDED 0)
  message(STATUS "Could not read 'ROOTSYS' path. Did you forget to set it?")
else()
  message(STATUS "Using 'ROOT' library from ${ROOT_SYS}")
endif()
set(ROOT_INCLUDE_DIRS ${ROOT_SYS}/include)
set(ROOT_LIBRARY_DIRS ${ROOT_SYS}/lib)
set(ROOT_LIBRARIES Core Imt RIO Net Hist Tree)

find_library(MATH_LIBRARY m)

add_executable(pdg_gun pdg_gun.c)
add_executable(exp_decay exp_decay.c)
add_executable(exp_iso exp_iso.c)
add_executable(tele tele.c)
add_executable(solid solid.c)

target_link_libraries(pdg_gun gun pdf sphere pdg vector ${MATH_LIBRARY})
target_link_libraries(exp_decay gun pdf sphere pdg vector ${MATH_LIBRARY})
target_link_libraries(exp_iso gun pdf sphere pdg vector ${MATH_LIBRARY})
target_link_libraries(tele gun pdf sphere pdg geometry vector ${MATH_LIBRARY})
target_link_libraries(solid gun pdf sphere pdg geometry vector ${MATH_LIBRARY})

if (CRY_ROOT_INCLUDED AND ROOT_SYS_INCLUDED)
  add_executable(cry_root cry_root.cc)
  target_compile_definitions(cry_root PUBLIC CRY_DATA="${CRY_DATA_DIR}")
  target_include_directories(cry_root PUBLIC ${CRY_INCLUDE_DIRS} ${ROOT_INCLUDE_DIRS})
  target_link_directories(cry_root PUBLIC ${CRY_LIBRARY_DIRS} ${ROOT_LIBRARY_DIRS})
  target_link_libraries(cry_root ${CRY_LIBRARIES} ${ROOT_LIBRARIES})
endif()
